--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -4,6 +4,7 @@
 
 <head>
     <title>About</title>
+     <link rel="image" href="/img/zohaib.jpg">
     <link rel="icon" href="/img/icon.jpg">
     <link rel="stylesheet" href="css/style.css">
 </head>
