--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -4,7 +4,7 @@
 
 <head>
     <title>About</title>
-     <link rel="image" href="/img/zohaib.jpg">
+     {{!-- <link rel="image" href="/img/zohaib.jpg"> --}}
     <link rel="icon" href="/img/icon.jpg">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,8 +12,8 @@
 <body>
     <div class="main-conatent">
         {{>header}}
-        {{!-- <img class="portrait other" src="img/robot.jpg"> --}}
-        <p>{{paragraph}}</p>
+          <p>{{paragraph}}</p>
+        <img class="portrait other" src="img/zohaib.jpg">
     </div>
     {{>footer}}
 </body>
