--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,8 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait other" src="img/robot.jpg">
-        <p>{{helptext}} <br> {{paragraph}}</p>
+        <p>{{helptext}}</p>
     </div>
     {{>footer}}
 </body>
