--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,8 @@ header a{
     text-decoration: none;
 }
 .portrait{
-    width: 250px;
+    width: 220px;
+    height: 300px;
     border-radius: 10px;
 }
 input{
